# Cerious-Cloud-Migration

./: .env.example  .gitignore  Create-DesktopShortcut.ps1  Launch-Cerious.bat  Launch-CeriousStartupService.vbs  README.md  Start-CeriousApp.ps1  Start-CeriousStartupService.ps1  Start-CeriousTerminal.cmd  Start-CeriousTerminal.ps1  package.json  requirements.txt
algos/: README.md  backtest_runner.py  main.py  requirements.txt  v3_titanium.py
algos/agents/: __init__.py  atr_engine.py  execution_agent.py  exit_agent.py  hmm_regime_engine.py  market_data_agent.py  reporting_agent.py  risk_guard_agent.py  strategy_alpha.py  strategy_beta.py  strategy_gamma.py  (+1 more)
apps/terminal/src-tauri/: Cargo.toml  tauri.conf.json
apps/terminal/src-tauri/capabilities/: default.json
apps/terminal/src-tauri/src/: main.rs
apps/terminal/src-tauri/windows/: hooks.nsh
docs/: ARBITEK_ROOT_README.md  ARCHITECTURE.md  CANONICAL_FILE_LAYOUT.md  CERIOUS_DESKTOP_CLIENT_WORKFLOW.txt  CERIOUS_NATIVE_TAURI_CPP_AERON_PLAN.md  CERIOUS_TARGET_PRODUCT_ARCHITECTURE.md  CHART_ENGINE_WORK_QUEUE.md  CLOUD_MIGRATION_AUDIT.md  LAST_KNOWN_GOOD_CLOUD_REACT_CPP_BUILD.md  PRESERVED_ASSETS.md  SIMULEX_NATIVE_BRIDGE_CONTRACT.md  SIMULEX_PRODUCT_SPEC.md  TAURI_PREREQUISITE_PUNCH_LIST.md
native/: README.md
native/simulex-cpp/: CMakeLists.txt  README.md  build-linux.sh  build-win.ps1
native/simulex-cpp/src/: ExecutionCommon.h  MarketDataSnapshot.h  Mdp3SbeParser.h  PriceIndexMap.h  SimulexBridgeContract.h  SimulexExchange.h  main.cpp  server.cpp
services/: __init__.py
shared/: execution_agent.py  features.py  journal.py  models.py  polymarket_client.py  probability.py  risk_gate.py  trapped_trader.py  tri_engine_system.py  types.py  v5_titanium_engine.py
tools/: compile_t4_protos.py
(+481 files in other folders)
