[package]
name = "cerious-systems-desktop"
version = "0.1.0"
description = "Cerious Systems desktop terminal"
authors = ["Cerious Systems"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
